--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>spring-kotlin</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>spring-kotlin</name>
-	<description>Spring Boot and Kotilin</description>
+	<description>Spring Boot and Kotlin</description>
 	<properties>
 		<java.version>17</java.version>
 		<kotlin.version>1.9.22</kotlin.version>
